[gd_scene load_steps=7 format=3 uid="uid://dqo0q148ntrb6"]

[ext_resource type="Script" uid="uid://bh484oe7s3vww" path="res://scene/UI/hud.gd" id="1_1f6md"]
[ext_resource type="Script" uid="uid://bflvrkc132fot" path="res://scene/UI/ui.gd" id="1_l1ivd"]
[ext_resource type="Texture2D" uid="uid://rsfj2l2m4kxo" path="res://texture/Guns/gun1.png" id="2_p06jy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p06jy"]
bg_color = Color(0, 0, 0, 0.2)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1ivd"]
bg_color = Color(0.5411765, 1, 0.24705882, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_viftj"]
bg_color = Color(0.21, 0.21, 0.21, 0.5882353)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_l1ivd")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_1f6md")

[node name="HPControl" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 0
offset_right = 281.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="HUD/HPControl"]
layout_mode = 1
offset_left = 35.0
offset_top = 8.0
offset_right = 271.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_p06jy")
theme_override_styles/fill = SubResource("StyleBoxFlat_l1ivd")
value = 100.0

[node name="Label" type="Label" parent="HUD/HPControl/ProgressBar"]
layout_mode = 0
offset_left = -30.0
offset_top = -3.0
offset_right = 10.0
offset_bottom = 20.0
text = "HP:"

[node name="Level" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 9.0
offset_right = 25.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_viftj")
text = "关卡1"

[node name="WeaponControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -71.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponPicture" type="TextureRect" parent="WeaponControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -61.0
offset_right = -18.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_p06jy")
stretch_mode = 6

[node name="WeaponName" type="Label" parent="WeaponControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -58.0
offset_right = -20.0
offset_bottom = -45.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "武器名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bullet" type="Label" parent="WeaponControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -46.0
offset_right = -64.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "30/30"

[node name="Pause" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.589355
offset_top = 13.0
offset_right = -16.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "暂停"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_right = 93.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ReturnGame" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "返回游戏"

[node name="ReturnMenu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "返回主菜单"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ReturnGame" to="." method="_on_return_game_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ReturnMenu" to="." method="_on_return_menu_pressed"]
